--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
                     ),
 
                   ),
-                );
+                ).on("click", function(){
+                	console.log(phim[n]);
+                });
               }),
             ),
           );
