--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         <!-- Modal Header -->
         <div class="modal-header">
-          <h4 class="modal-title"></h4>
+          <h4 class="modal-title"> Chi tiết bộ phim</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
 
@@ -278,7 +278,34 @@
 
                   ),
                 ).on("click", function(){
-                	console.log(phim[n]);
+                  $(".modal-body").children().remove();
+                  $(".modal-body").append(
+                    $("<img>", {src: "https://m.media-amazon.com/images/M/MV5BMzk2OTg4MTk1NF5BMl5BanBnXkFtZTcwNjExNTgzNA@@._V1_UX182_CR0,0,182,268_AL_.jpg", class:"card-img-top w-25 d-inline-block"}),
+
+                    $("<div>", { class: "card-body d-inline-block"}).append(
+                      $("<h5>", { class: "card-title ", text: "Phim: " + phim[n].title}),
+
+                      $("<div>", { class: "card-text text-left "}).append(
+                        $("<div>", { class: " font-weight-bold d-inline", text: "Đạo diễn: "}),
+                        $("<div>", {class: "d-inline", text: phim[n].director})
+                      ),
+                      $("<div>", { class: "card-text text-left mt-2"}).append(
+                        $("<div>", { class: " font-weight-bold d-inline", text: "Diễn viên: "}),
+                        $("<div>", {class: "d-inline", text: phim[n].stars})
+                      ),
+
+                      $("<div>", { class: "card-text text-left mt-2"}).append(
+                        $("<div>", { class: " font-weight-bold d-inline", text: "Thể loại: "}),
+                        $("<div>", {class: "d-inline", text: phim[n].category})
+                      ),
+
+                      $("<div>", { class: "card-text text-left position-absolute mt-2"}).append(
+                        $("<div>", { class: " font-weight-bold d-inline  ", text: "Đánh giá: "}),
+                        $("<div>", {class: "d-inline ", text: phim[n].rating})
+                      ),
+                    ),
+                  ),
+                    $('#myModal').modal('show');
                 });
               }),
             ),
@@ -311,9 +338,6 @@
       $.getJSON("http://127.0.0.1:5000/history", {data : val}, function(data){
         makeSlide(data,phimH,checkH,categoryH,directorH,ratingH,titleH,starsH,"history");
       });
-    });
-    $("#movie").click(function(){
-
     });
   });
 
